--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,28 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
+.DS_Store
+node_modules
+/dist
+
+/tests/e2e/videos/
+/tests/e2e/screenshots/
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea*
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 .env
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
 composer.lock
+vendor/
 docker-compose.yml
